--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <button class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600" onclick="window.open('thankyou.html', '_blank');">
             Play Game 
           </button>
-        <a href="" class="bg-white text-gray-800 py-2 px-4 rounded-full hover:bg-gray-500 hover:text-white">Learn More</a>
+        <a href="quiz.html" class="bg-white text-gray-800 py-2 px-4 rounded-full hover:bg-gray-500 hover:text-white">Learn More About Me with ChatBot</a>
       </div>
     </div>
   </section>
