--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <h2 class="text-3xl font-medium leading-tight text-center mb-6">About Me</h2>
       <div class="flex flex-col lg:flex-row items-center">
         <div class="w-full lg:w-1/2">
-          <img src="/home/manish/new/manish.jpg" alt="profile picture" class="rounded-full h-64 w-64 mx-auto mb-6 lg:mb-0"> 
+          <img src="manish.jpg" alt="profile picture" class="rounded-full h-64 w-64 mx-auto mb-6 lg:mb-0"> 
         </div>
         <div class="w-full lg:w-1/2 px-6">
           <p class="text-gray-700 mb-6"> I am Manish Bhusal. I am a technology Lover Thanks ! 
@@ -99,7 +99,7 @@
         <a href="https://example.com/project1" target="_blank">
           <div class="bg-white rounded-lg shadow-lg p-6">
             <h3 class="text-xl font-medium">Project 1</h3>
-            <p class="text-gray-700">A brief description of the project and its features.</p>
+            <p class="text-gray-700"> Personal Portfolio Design .</p>
           </div>
         </a>
       </div>
@@ -107,7 +107,7 @@
         <a href="https://example.com/project2" target="_blank">
           <div class="bg-white rounded-lg shadow-lg p-6">
             <h3 class="text-xl font-medium">Project 2</h3>
-            <p class="text-gray-700">A brief description of the project and its features.</p>
+            <p class="text-gray-700">Second Project</p>
           </div>
         </a>
       </div>
@@ -115,7 +115,7 @@
         <a href="https://example.com/project3" target="_blank">
           <div class="bg-white rounded-lg shadow-lg p-6">
             <h3 class="text-xl font-medium">Project 3</h3>
-            <p class="text-gray-700">A brief description of the project and its features.</p>
+            <p class="text-gray-700">Third Project.</p>
           </div>
         </a>
       </div>
