--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <a href="https://example.com/project2" target="_blank">
           <div class="bg-white rounded-lg shadow-lg p-6">
             <h3 class="text-xl font-medium">Project 2</h3>
-            <p class="text-gray-700">Second Project</p>
+            <p class="text-gray-700">Simple Chat Bot </p>
           </div>
         </a>
       </div>
@@ -126,7 +126,7 @@
         <a href="https://example.com/project3" target="_blank">
           <div class="bg-white rounded-lg shadow-lg p-6">
             <h3 class="text-xl font-medium">Project 3</h3>
-            <p class="text-gray-700">Third Project.</p>
+            <p class="text-gray-700">Robotic Arm .</p>
           </div>
         </a>
       </div>
