--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <h2 class="text-3xl font-medium leading-tight text-center mb-6">About Me</h2>
       <div class="flex flex-col lg:flex-row items-center">
         <div class="w-full lg:w-1/2">
-          <img src="manish.jpg" alt="profile picture" class="rounded-full h-64 w-64 mx-auto mb-6 lg:mb-0"> 
+          <img src="manish2.jpg" alt="profile picture" class="rounded-full h-64 w-64 mx-auto mb-6 lg:mb-0"> 
         </div>
         <div class="w-full lg:w-1/2 px-6">
           <p class="text-gray-700 mb-6"> I am Manish Bhusal. I am a technology Lover Thanks ! 
