--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               
         </div>
         <div class="about-img">
-            <img src="manish2.jpg" alt="profile picture" class="rounded-full h-64 w-64 mx-auto mb-6 lg:mb-0"> 
+            <img src="/home/manish/new/manish2.jpg" alt="profile picture" class="rounded-full h-64 w-64 mx-auto mb-6 lg:mb-0"> 
         </div>
     </div>
 </section>
