--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <!-- Home Section Start -->
 <section class="home" id="home">
     <div class="home-img">
-        <img src="manish2.jpg" alt="">
+        <img src="manish.jpg" alt="">
     </div>
     <div class="home-text">
         <h1>Hello, I'm Manish Bhusal</h1>
@@ -89,7 +89,7 @@
               
         </div>
         <div class="about-img">
-            <img src="/home/manish/new/manish2.jpg" alt="profile picture" class="rounded-full h-64 w-64 mx-auto mb-6 lg:mb-0"> 
+            <img src="manish2.jpg" alt="profile picture" class="rounded-full h-64 w-64 mx-auto mb-6 lg:mb-0"> 
         </div>
     </div>
 </section>
