--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@
               
         </div>
         <div class="about-img">
-            <img src="/home/manish/new/manish2.jpg" alt="profile picture" class="rounded-full h-64 w-64 mx-auto mb-6 lg:mb-0"> 
-        </div>
-    </div>
+   <img src="https://example.com/path/to/manish2.jpg" alt="profile picture" class="rounded-full h-64 w-64 mx-auto mb-6 lg:mb-0"> 
+</div>
 </section>
 
 
